<resources>
    <string name="app_name">Random Number Generator</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeTitle">Get a Random Number!</string>
    <string name="lb_place_holder">1</string>
    <string name="without_replacement">Without Replacement</string>
    <string name="get_number">GET NUMBER</string>
    <string name="output_hint">8</string>
    <string name="up_place_holder">30</string>
    <string name="app_title">Random Number Generator</string>
</resources>
