<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorAppView">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/lbEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonTextColor"
        android:layout_margin="20dp"
        android:hint="@string/lb_place_holder"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/ubEditText"
        android:background="@color/buttonTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/up_place_holder"
        app:layout_constraintTop_toBottomOf="@id/lbEditText"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="20dp" />

    <CheckBox
        android:id="@+id/withoutReplacementCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ubEditText"
        android:layout_marginStart="20dp"
        android:hint="@string/without_replacement"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/output_hint"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/withoutReplacementCheckBox"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/getNumberButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_number"
        android:background="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>